Fixed overlapping Avgrund panels and Admin::BaseController Issue

--- a/app/assets/stylesheets/wheel.scss
+++ b/app/assets/stylesheets/wheel.scss
@@ -50,7 +50,7 @@
   -moz-transform: rotate(60deg);
   -o-transform: rotate(60deg);
   -ms-transform: rotate(60deg);
-  border-color: #16a085 transparent;  
+  border-color: #ECFEAA transparent;  
 }
 #wheel div.sec:nth-child(2){
   transform: rotate(120deg);
@@ -58,7 +58,7 @@
   -moz-transform: rotate(120deg);
   -o-transform: rotate(120deg);
   -ms-transform: rotate(120deg);
-  border-color: #2980b9 transparent;  
+  border-color: #E2DE84 transparent;  
 }
 #wheel div.sec:nth-child(3){
   transform: rotate(180deg);
@@ -66,7 +66,7 @@
   -moz-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  border-color: #34495e transparent;  
+  border-color: #A6A670 transparent;  
 }
 #wheel div.sec:nth-child(4){
   transform: rotate(240deg);
@@ -74,7 +74,7 @@
   -moz-transform: rotate(240deg);
   -o-transform: rotate(240deg);
   -ms-transform: rotate(240deg);
-  border-color: #f39c12 transparent;  
+  border-color: #86836D transparent;  
 }
 #wheel div.sec:nth-child(5){
   transform: rotate(300deg);
@@ -82,7 +82,7 @@
   -moz-transform: rotate(300deg);
   -o-transform: rotate(300deg);
   -ms-transform: rotate(300deg);
-  border-color: #d35400 transparent;  
+  border-color: #626267 transparent;  
 }
 #wheel div.sec:nth-child(6){
   transform: rotate(360deg);
@@ -90,7 +90,7 @@
   -moz-transform: rotate(360deg);
   -o-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
-  border-color: #c0392b transparent;  
+  border-color: #FFFCF9 transparent;  
 }
 
 
@@ -210,7 +210,13 @@ opacity:0.1;
 #txt {
     color: #000;
 }
+#result {
+  display: none;
+}
 .avgrund-popin {
   top: 100px;
+  #result {
+    display: block;   
+  }
 }
 // END WHEEL
